--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-minimal
+theme: jekyll-theme-slate
 title: Digital Hygiene Course
 description: Master digital security in ~2.5 hours.
